preparation for performance tests